...
import cz.mendelu.xmusil5.plantdiscoverer.ui.components.templates.DeleteDialog
import cz.mendelu.xmusil5.plantdiscoverer.utils.DateUtils
import cz.mendelu.xmusil5.plantdiscoverer.utils.PictureUtils
import org.koin.androidx.compose.getViewModel
import java.util.*

const val TAG_PLANT_DETAIL_PLANT_IMAGE = "plantDetailPlantImage"
const val TAG_PLANT_DETAIL_NAME = "plantDetailName"
const val TAG_PLANT_DETAIL_QUERY = "plantDetailQuery"
const val TAG_PLANT_DETAIL_PLACE = "plantDetailPlace"
const val TAG_PLANT_DETAIL_DESCRIPTION = "plantDetailDescription"
const val TAG_PLANT_DETAIL_DATE = "plantDetailDate"
const val TAG_PLANT_DETAIL_SEARCH_BUTTON = "plantDetailSearchButton"

const val TAG_PLANT_DETAIL_EDIT_BUTTON = "plantDetailEditButton"
const val TAG_PLANT_DETAIL_DELETE_BUTTON = "plantDetailDeleteButton"

@Composable
fun PlantDetailScreen(
    navigation: INavigationRouter,
    plantId: Long,
    viewModel: PlantDetailViewModel = getViewModel()
...
