...
import cz.mendelu.xmusil5.plantdiscoverer.ui.theme.shadowColor
import cz.mendelu.xmusil5.plantdiscoverer.utils.LanguageUtils
import org.koin.androidx.compose.getViewModel
import java.util.*
import kotlin.reflect.jvm.internal.impl.descriptors.Visibilities.Local

const val TAG_SETTINGS_LANGUAGE_DROPDOWN = "settingsDropdown"
const val TAG_SETTINGS_LANGUAGE_CZECH = "settingsLanguageCzech"
const val TAG_SETTINGS_LANGUAGE_ENGLISH = "settingsLanguageEnglish"

@Composable
fun SettingsScreen(
    navigation: INavigationRouter,
    viewModel: SettingsViewModel = getViewModel()
) {
...
